1. Created and linked files for responsive CSS
2. Added favicon

3. Cleaned up project by deleting unnecessary files

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Website Test</title>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <title>Zoom Clone Website</title>
     <script src="https://smtpjs.com/v3/smtp.js" defer></script>
     <script src="scripts/email.js" defer></script>
-    <script src="scripts/download.js" defer></script>
     <script src="scripts/os.js" defer></script>
     <script src="scripts/observers.js" defer></script>
+    <link href="assets/images/zoom-logo.png" rel="icon" type="image/png" >
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="adapt.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header>
@@ -87,8 +87,6 @@
         </div>  
       </div>
     </section>
-    <footer class="test">
-      <a id="link-test">Link</a>
-    </footer>
+    <footer></footer>
   </body>
 </html>
