1. Added beta support for desktop notifications using the applicable API

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://smtpjs.com/v3/smtp.js" defer></script>
     <script src="scripts/email.js" defer></script>
     <script src="scripts/os.js" defer></script>
+    <script src="scripts/notify.js" defer></script>
     <script src="scripts/observers.js" defer></script>
     <link href="assets/images/zoom-logo.png" rel="icon" type="image/png" >
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
