Realized & Styled Contact Form

--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Zoom Clone Website</title>
-    <script src="https://smtpjs.com/v3/smtp.js" defer></script>
-    <script src="scripts/email.js" defer></script>
-    <script src="scripts/os.js" defer></script>
-    <script src="scripts/notify.js" defer></script>
-    <script src="scripts/observers.js" defer></script>
-    <link href="assets/images/zoom-logo.png" rel="icon" type="image/png" >
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <link href="adapt.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <header>
-      <img class="header-image" src="assets/images/encryption.jpg"></img>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<title>Zoom Clone Website</title>
+	<script src="https://smtpjs.com/v3/smtp.js" defer></script>
+	<script src="scripts/email.js" defer></script>
+	<script src="scripts/os.js" defer></script>
+	<script src="scripts/notify.js" defer></script>
+  <script src="scripts/observers.js" defer></script>
+	<link href="assets/images/zoom-logo.png" rel="icon" type="image/png">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="style.css" rel="stylesheet" type="text/css" />
+	<link href="adapt.css" rel="stylesheet" type="text/css" />
+</head>
+<body>
+	<header>
+		<img class="header-image" src="assets/images/encryption.jpg"></img>
       <div class="header-container">
         <h2 class="header-text">Insert Tagline Here</h2>
         <button id="download-button" class="download-button">Download</button>
@@ -84,10 +84,14 @@
         </div>
         <div class="form-container-child">
           <textarea id="messageField" class="form-field message-field" placeholder="Enter Message Here"></textarea>
-          <button id="submitButton" class="submit-button">Submit</button>   
-        </div>  
+        </div>
+      </div>
+      <br/>
+      <div class="submit-button-container">
+        <button id="submitButton" class="submit-button">Submit</button>   
       </div>
     </section>
     <footer></footer>
-  </body>
+</body>
 </html>
+
