1. Fixed text field styling  bug
2. Fixed layout issue with the message field in the contact form

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<img class="header-image" src="assets/images/encryption.jpg"></img>
       <div class="header-container">
         <h2 class="header-text">Insert Tagline Here</h2>
-        <button id="download-button" class="download-button">Download</button>
+        <button id="download-button" class="button-base download-button">Download</button>
       </div> 
     </header>
     <section class="feature-section">
@@ -83,11 +83,11 @@
            <input class="form-field email-field" type="text" id="emailField" name="email" placeholder="Enter Email Here"><br>
         </div>
         <div class="form-container-child">
-          <textarea id="messageField" class="form-field message-field" placeholder="Enter Message Here"></textarea>
+          <textarea rows="5" id="messageField" class="form-field message-field" placeholder="Enter Message Here"></textarea>
         </div>
       </div>
       <div class="submit-button-container">
-        <button id="submitButton" class="submit-button">Submit</button>   
+        <button id="submitButton" class="button-base submit-button">Submit</button>   
       </div>
     </section>
     <footer></footer>
