1. Improved File Structure

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <script src="scripts/observers.js" defer></script>
 	<link href="assets/images/zoom-logo.png" rel="icon" type="image/png">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link href="style.css" rel="stylesheet" type="text/css" />
-	<link href="adapt.css" rel="stylesheet" type="text/css" />
+	<link href="stylesheets/style.css" rel="stylesheet" type="text/css" />
+	<link href="stylesheets/adapt.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 	<header>
