1. Added script containing helper functions for HTTP requests using Axios

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Zoom Clone Website</title>
-	<script src="https://smtpjs.com/v3/smtp.js" defer></script>
-	<script src="scripts/email.js" defer></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" defer></script>
+  <script src="https://smtpjs.com/v3/smtp.js" defer></script>
+  <script src="scripts/email.js" defer></script>
 	<script src="scripts/os.js" defer></script>
 	<script src="scripts/notify.js" defer></script>
   <script src="scripts/observers.js" defer></script>
+  <script src="scripts/http.js" defer></script>
 	<link href="assets/images/zoom-logo.png" rel="icon" type="image/png">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="stylesheets/style.css" rel="stylesheet" type="text/css" />
