1. Started moving functions better suited for the server from the client to the server
2. Styled copyright text in footer

--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Zoom Clone Website</title>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" defer></script>
-  <script src="https://smtpjs.com/v3/smtp.js" defer></script>
-  <script src="scripts/email.js" defer></script>
-	<script src="scripts/os.js" defer></script>
-	<script src="scripts/notify.js" defer></script>
-  <script src="scripts/observers.js" defer></script>
-  <script src="scripts/http.js" defer></script>
 	<link href="assets/images/zoom-logo.png" rel="icon" type="image/png">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="stylesheets/style.css" rel="stylesheet" type="text/css" />
 	<link href="stylesheets/adapt.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" defer></script>
+  <script src="https://smtpjs.com/v3/smtp.js" defer></script>
+  <script src="scripts/email.js" defer></script>
+	<script src="scripts/os.js" defer></script>
+	<script src="scripts/notify.js" defer></script>
+  <script src="scripts/observers.js" defer></script>
+  <script src="scripts/http.js" defer></script>
 	<header>
 		<img class="header-image" src="assets/images/encryption.jpg"></img>
       <div class="header-container">
@@ -81,18 +81,19 @@
       <hr class="section-header-underline"></hr>
       <div class="form-container">
         <div class="form-container-child">
-          <input class="form-field name-field" type="text" id="nameField" name="name" placeholder="Enter Name Here"><br>
-           <input class="form-field email-field" type="text" id="emailField" name="email" placeholder="Enter Email Here"><br>
+          <input class="form-field" type="text" id="nameField" placeholder="Enter Name Here"><br>
+          <input class="form-field" type="text" id="emailField" placeholder="Enter Email Here"><br>
         </div>
         <div class="form-container-child">
-          <textarea rows="5" id="messageField" class="form-field message-field" placeholder="Enter Message Here"></textarea>
+          <textarea rows="5" id="messageField" class="form-field" placeholder="Enter Message Here"></textarea>
         </div>
       </div>
       <div class="submit-button-container">
         <button id="submitButton" class="button-base submit-button">Submit</button>   
       </div>
     </section>
-    <footer></footer>
+    <footer>
+      <span class="copyright-text">Copyright © 2020 - <span style="color: #EC7801">[Insert Company Here]</span></span>
+    </footer>
 </body>
 </html>
-
