--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 	<link href="stylesheets/adapt.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" defer></script>
-  <script src="https://smtpjs.com/v3/smtp.js" defer></script>
-  <script src="scripts/email.js" defer></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" defer></script>
+	<script src="https://smtpjs.com/v3/smtp.js" defer></script>
+	<script src="scripts/email.js" defer></script>
 	<script src="scripts/os.js" defer></script>
 	<script src="scripts/notify.js" defer></script>
-  <script src="scripts/observers.js" defer></script>
-  <script src="scripts/http.js" defer></script>
+	<script src="scripts/observers.js" defer></script>
+	<script src="scripts/http.js" defer></script>
 	<header>
 		<img class="header-image" src="assets/images/encryption.jpg"></img>
       <div class="header-container">
@@ -93,7 +93,9 @@
       </div>
     </section>
     <footer>
-      <span class="copyright-text">Copyright © 2020 - <span style="color: #EC7801">[Insert Company Here]</span></span>
+      <span class="copyright-text">Copyright © 2020 - 
+        <span style="color: #EC7801">[Insert Company Here]</span>
+      </span>
     </footer>
 </body>
 </html>
